# docsignal

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: analytics.py  database.py  embeddings.py  ingestion.py  main.py  models.py  presets.py  qa.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: About.jsx  AskPanel.jsx  Dashboard.jsx  ExampleQuestions.jsx  PresetBar.jsx  UploadPanel.jsx
tests/integration/: test_lifecycle.py
tests/unit/: test_embeddings.py  test_ingestion.py  test_routes.py
